# openclaw_news_publisher

./: .gitattributes  .gitignore  README.md  pyproject.toml  tmp_test_report_utf8.json
.cursor/skills/openclaw-news-publisher/: SKILL.md
.cursor/skills/openclaw-news-publisher-enhanced/: .gitignore  README.md  SKILL.md  requirements.txt
.cursor/skills/openclaw-price-analysis-reporting/: SKILL.md
.cursor/skills/openclaw-price-ingest-external/: README.md  SKILL.md
.cursor/skills/openclaw-public-news-library/: SKILL.md
app/: main.py
app/api/v1/: chat.py  openclaw.py
app/core/: config.py  security.py
app/db/: models.py  repositories.py
app/schemas/: monitoring.py  news.py  report.py
app/services/: intake_service.py  monitoring_scheduler.py  monitoring_service.py  openclaw_chat_bridge.py  publish_service.py  report_management_service.py  report_service.py
app/workers/: job_runner.py
content/reports/raw/: 09e6ab4f-12b8-40c0-b8eb-00bf715829e3.json  5710bb70-176e-410e-b762-dbea4da777bc.json  5b21bf16-07d7-4360-b468-b570a102c0fb.json  (+4 more)
docs/: cross-platform-development.md
docs/api/: openclaw-intake.md
docs/architecture/: news-pipeline.md
openclaw_news_publisher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: publish_site.py
scripts/deploy/: one-click-linux.sh  one-click-windows.ps1
scripts/local/: openclaw-webview-one-click.sh  restart-server.sh  start-server.sh  stop-server.sh  verify-openclaw-databases.sh  workflow-post-check.sh
tests/api/: test_openclaw_intake.py
tests/services/: test_monitoring_service.py  test_report_pipeline.py
(+36 files in other folders)
