[project]
name = "openclaw-news-publisher"
version = "0.1.0"
description = "OpenClaw news intake and publish service"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "pydantic-settings",
  "uvicorn",
  "websockets",
  "psycopg[binary]",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
